0.2.0
  - Added support for logger.ap (including Rails logger)
  - ap now works with scripts that use ActiveRecord/ActiveSupport outside Rails
  - ap now correctly shows file and directory names with fancy characters (shell escape)

0.1.4
  - Format BigDecimal and Rational objects as Float scalars
  - Explicit options parameter can override custom defaults
  - Custom defaults are not interfering when running specs
  - Custom defaults now work correctly with Ruby 1.9.x

0.1.3
  - Added support for setting custom defaults in ~/.aprc
  
0.1.2
  - Correctly handle empty arrays and hashes
  - Use alias_method instead of alias (fixes non-tty method aliasing)
  - Added awesome_inspect method

0.1.1
  - Added support for tableless ActiveRecord models
  - Left align hash keys if @options[:indent] is negative
  
0.1.0
  - Initial Release.
  