@@ -5,11 +5,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{awesome_print}
-  s.version = "0.1.4"
+  s.version = "0.2.0"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Michael Dvorkin"]
-  s.date = %q{2010-04-08}
+  s.date = %q{2010-05-05}
   s.description = %q{Great Ruby dubugging companion: pretty print Ruby objects to visualize their structure. Supports Rails ActiveRecord objects via included mixin.}
   s.email = %q{mike@dvorkin.net}
   s.extra_rdoc_files = [
@@ -26,11 +26,14 @@ Gem::Specification.new do |s|
      "lib/ap.rb",
      "lib/ap/awesome_print.rb",
      "lib/ap/core_ext/kernel.rb",
+     "lib/ap/core_ext/logger.rb",
      "lib/ap/core_ext/string.rb",
-     "lib/ap/mixin/rails.rb",
+     "lib/ap/mixin/active_record.rb",
+     "lib/ap/mixin/active_support.rb",
      "rails/init.rb",
+     "spec/active_record_spec.rb",
      "spec/awesome_print_spec.rb",
-     "spec/rails_spec.rb",
+     "spec/logger_spec.rb",
      "spec/spec.opts",
      "spec/spec_helper.rb",
      "spec/string_spec.rb"
@@ -42,8 +45,9 @@ Gem::Specification.new do |s|
   s.rubygems_version = %q{1.3.6}
   s.summary = %q{Pretty print Ruby objects with proper indentation and colors.}
   s.test_files = [
-    "spec/awesome_print_spec.rb",
-     "spec/rails_spec.rb",
+    "spec/active_record_spec.rb",
+     "spec/awesome_print_spec.rb",
+     "spec/logger_spec.rb",
      "spec/spec_helper.rb",
      "spec/string_spec.rb"
   ]
