@@ -17,6 +17,8 @@ module AwesomePrintActiveSupport
     if printable == :self
       if object.is_a?(ActiveSupport::TimeWithZone)
         printable = :active_support_time
+      elsif object.is_a?(HashWithIndifferentAccess)
+        printable = :hash_with_indifferent_access
       end
     end
     printable
@@ -26,6 +28,15 @@ module AwesomePrintActiveSupport
   #------------------------------------------------------------------------------
   def awesome_active_support_time(object)
     awesome_self(object, :as => :time)
+  end
+
+  # Format HashWithIndifferentAccess as standard Hash.
+  #
+  # NOTE: can't use awesome_self(object, :as => :hash) since awesome_self uses
+  # object.inspect internally, i.e. it would convert hash to string.
+  #------------------------------------------------------------------------------
+  def awesome_hash_with_indifferent_access(object)
+    awesome_hash(object)
   end
 
 end
