@@ -1,5 +1,6 @@
 0.2.0
   - Added support for logger.ap (including Rails logger)
+  - Added support for HashWithIndifferentAccess from ActiveSupport
   - ap now works with scripts that use ActiveRecord/ActiveSupport outside Rails
   - ap now correctly shows file and directory names with fancy characters (shell escape)
 
